fix update title not readable

--- a/plugins/Morpheus/stylesheets/uibase/_headerMessage.less
+++ b/plugins/Morpheus/stylesheets/uibase/_headerMessage.less
@@ -9,7 +9,7 @@
   border-radius: 4px;
 
   &.update_available:not(.isPiwikDemo) .title {
-    color: #fbf7f1;
+    color: #f57c00;
     font-weight: bold;
     cursor: default;
   }
